--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -7,29 +7,29 @@
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13206019.md#1" title="滴滴京东成立工会 分析：中共加强控制民企""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13152687-510989-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205660.md#1" title="美最高法院裁决 拒阻止德州执行反堕胎法""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206021-GettyImages-1336677302-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205957.md#1" title="【快讯】第九届全世界中国古典舞大赛开赛""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206102-20210902-dance-competition-NTDTV6-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204557.md#1" title="【更新】纽约市暴雨引发洪水 至少8人死""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204559-151877-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204557.md#1" title="【更新】纽约市暴雨引发洪水 8人死""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13204559-151877-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205087.md#1" title="【疫情9.2】Mu变种39国现踪 美国逾2千例""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/147166-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13203728.md#1" title="【一线采访】河南卫辉商户曝洪灾背后黑幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203946-a0c01e2c5874a095824b7a3b87c9f8d3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204257.md#1" title="美众院批准提高国防开支 增加近250亿美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13106249-150887-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13203539.md#1" title="【独家】习思想进课堂 大学生首当其冲""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13188522-GettyImages-73681319@1200x1200-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wzyhai300/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wzyhai300.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/3/n13206642.md#1">中诚信下调恒大地产主体及债项信用等级至AA</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/3/n13206993.md#1">26参议员吁拜登说明 如何解决阿富汗人道危机</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/3/n13206846.md#1">【翻墙必看】胡锡进挑战官媒 网民：谁和谁斗？</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/3/n13206846.md#1">【翻墙必看】胡锡进挑战官媒 网民：谁和谁斗？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13206073.md#1">黄秋生庆60岁生日 杜汶泽祝“好人一生平安”</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/3/n13206641.md#1">近期多名法轮功学员遭中共绑架后死亡</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13206198.md#1">美F-35B战机将登上日本轻航母 剑指中共</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13202315.md#1">中共官方刊登五千字长文批郎平 引发争议</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13201734.md#1">【拍案惊奇】北京发起新文革？三类“斗争对象”</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13203664.md#1">黑龙江高校6名学生干部查寝耍官威 引热议</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13202131.md#1">50万元算高收入 会成共同富裕调节目标？</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204286.md#1">浙江杭州副市长王宏被免职</a><br>
+<a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13201637.md#1">中共11月开六中全会 多名参会委员身份变更</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204307.md#1">湖南养老机构爆雷 近二千老人痛失近亿养老钱</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204642.md#1">大陆猪肉价格大跌 当局喊话民众多吃猪肉惹议</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13202919.md#1">中国房价续滑 房地产恐成负资产</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/2/n13204852.md#1">习称风险挑战多 学者：再喊斗争显示形势严峻</a><br>
-<a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13203270.md#1">报告指中共初具瘫痪台湾作战能力 专家解读</a><br>
 <br><p align="center"><a href="https://github.com/wzyhai300/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/9/1/n13203646.md#1">【有冇搞错】中国周边紧张 冲突一触即发</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/20/n13176433.md#1">【思想领袖】罗斯曼：在华被关黑监受酷刑</a><br>
@@ -100,14 +100,14 @@
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/30/n13197429.md#1">反对中共强制打疫苗 大陆民众遭恐吓威胁</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/29/n13195924.md#1">前山东副省长李玉妹罪行 递交37国政府</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.170.36.157/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,927</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.227.124.199/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,927</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 382,946,665 人
+!共 382,945,663 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201338-001-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200763.md#1">监狱强迫法轮功学员张继红截肢 其妻拒绝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201306.md#1">在京遭暴力截访 湖北访民：连犯人都不如</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199608.md#1">山东当局耍手段 访民苏士芹被夫劝返后遭拘留</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206642.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205700-d8fbf5c8edc44051976d00d8c15bde56-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206642.md#1">中诚信下调恒大地产主体及债项信用等级至AA</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206427.md#1">中国调味品龙头海天味业市值数月蒸发3033亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206020.md#1">就太阳能板和中共在世贸交锋 美国获胜</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205961.md#1">党要给你打分 中共正悄悄接管全民数据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205353.md#1">传蚂蚁让步 拟将消费者数据主控权给国企</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205532.md#1">大陆11家网约车平台公司再遭当局“约谈”</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206557-GettyImages-1337905671-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1">中共与塔利班交好 白宫这样回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206158.md#1">塔利班：北京是主要伙伴 将依赖中国资金</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206137.md#1">意大利警方：中共国企涉非法并购意军工企业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205911.md#1">克里访华谈气候 王毅杨洁篪硬要谈中美关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205108.md#1">AIT新处长密集拜会台湾官员 深化美台关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205035.md#1">中共在南海立规矩 美国防部和国务院驳回</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205044-FotoJet-45365635-456-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199944.md#1">视频：青岛暴雨城区淹水 景区水势汹涌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-501992286-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201414.md#1">三退声明精选（2021/08/31）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13198940.md#1">湖北恩施知名企业家被股东驾车撞伤致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198516.md#1">李冰冰出12万月薪请保姆 面试洗菜刷掉20多人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13201338-001-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200763.md#1">监狱强迫法轮功学员张继红截肢 其妻拒绝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201306.md#1">在京遭暴力截访 湖北访民：连犯人都不如</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199608.md#1">山东当局耍手段 访民苏士芹被夫劝返后遭拘留</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206427.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/07/1512282148241538-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206427.md#1">中国调味品龙头海天味业市值数月蒸发3033亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206020.md#1">就太阳能板和中共在世贸交锋 美国获胜</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205961.md#1">党要给你打分 中共正悄悄接管全民数据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205353.md#1">传蚂蚁让步 拟将消费者数据主控权给国企</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205532.md#1">大陆11家网约车平台公司再遭当局“约谈”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205405.md#1">中国打压科技公司 外媒：自废武功</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206557-GettyImages-1337905671-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206547.md#1">中共与塔利班交好 白宫这样回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206158.md#1">塔利班：北京是主要伙伴 将依赖中国资金</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206137.md#1">意大利警方：中共国企涉非法并购意军工企业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205911.md#1">克里访华谈气候 王毅杨洁篪硬要谈中美关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205108.md#1">AIT新处长密集拜会台湾官员 深化美台关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205035.md#1">中共在南海立规矩 美国防部和国务院驳回</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205044-FotoJet-45365635-456-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201544.md#1">山东滨州发生两宗炭疽病例 14岁学生染疫亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199944.md#1">视频：青岛暴雨城区淹水 景区水势汹涌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-501992286-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13206555.md#1">孙俪眼球凸出遭疑得甲亢 网民：证明没医美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202865.md#1">组图：上海出现病例 居民排队接受病毒检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201414.md#1">三退声明精选（2021/08/31）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13198940.md#1">湖北恩施知名企业家被股东驾车撞伤致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198516.md#1">李冰冰出12万月薪请保姆 面试洗菜刷掉20多人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
 <a href="https://github.com/wzyhai300/djy/blob/master/gb/21/8/20/n13174730.md#1">【独家】中共建“规章制度”迫害法轮功</a><br>
